--- a/YY.Server/YY.Server.csproj
+++ b/YY.Server/YY.Server.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -6,11 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="dym.EngineData" Version="1.0.4" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Packages\" />
+    <PackageReference Include="dym.Rpc.Server" Version="1.0.6" />
   </ItemGroup>
 
   <ItemGroup>
