--- a/.gitignore
+++ b/.gitignore
@@ -67,3 +67,40 @@
 /YY.Server/obj/YY.Server.csproj.nuget.g.targets
 /YY.Server/obj/project.assets.json
 /dymDemo.sln.DotSettings.user
+/Packages/dym.Plugs.SamsundotService/bin/Debug/netstandard2.0/dym.Plugs.SamsundotService.deps.json
+/Packages/dym.Plugs.SamsundotService/bin/Debug/netstandard2.0/dym.Plugs.SamsundotService.dll
+/Packages/dym.Plugs.SamsundotService/bin/Debug/netstandard2.0/dym.Plugs.SamsundotService.pdb
+/Packages/dym.Plugs.SamsundotService/obj/Debug/netstandard2.0/dym.Plugs.SamsundotService.AssemblyInfo.cs
+/Packages/dym.Plugs.SamsundotService/obj/Debug/netstandard2.0/dym.Plugs.SamsundotService.AssemblyInfoInputs.cache
+/Packages/dym.Plugs.SamsundotService/obj/Debug/netstandard2.0/dym.Plugs.SamsundotService.assets.cache
+/Packages/dym.Plugs.SamsundotService/obj/Debug/netstandard2.0/dym.Plugs.SamsundotService.csproj.CoreCompileInputs.cache
+/Packages/dym.Plugs.SamsundotService/obj/Debug/netstandard2.0/dym.Plugs.SamsundotService.csproj.FileListAbsolute.txt
+/Packages/dym.Plugs.SamsundotService/obj/Debug/netstandard2.0/dym.Plugs.SamsundotService.csprojAssemblyReference.cache
+/Packages/dym.Plugs.SamsundotService/obj/Debug/netstandard2.0/dym.Plugs.SamsundotService.dll
+/Packages/dym.Plugs.SamsundotService/obj/Debug/netstandard2.0/dym.Plugs.SamsundotService.pdb
+/Packages/dym.Plugs.SamsundotService/obj/dym.Plugs.SamsundotService.csproj.nuget.cache
+/Packages/dym.Plugs.SamsundotService/obj/dym.Plugs.SamsundotService.csproj.nuget.dgspec.json
+/Packages/dym.Plugs.SamsundotService/obj/dym.Plugs.SamsundotService.csproj.nuget.g.props
+/Packages/dym.Plugs.SamsundotService/obj/dym.Plugs.SamsundotService.csproj.nuget.g.targets
+/Packages/dym.Plugs.SamsundotService/obj/project.assets.json
+/YY.AppCenter/bin/Debug/netcoreapp2.2/AppCenter.bat
+/YY.AppCenter/obj/Debug/netcoreapp2.2/YY.AppCenter.csprojAssemblyReference.cache
+/YY.Client/bin/Debug/netcoreapp2.2/AppClient.bat
+/YY.Server/bin/Debug/netcoreapp2.2/AppService6661.bat
+/YY.Server/bin/Debug/netcoreapp2.2/AppService6662.bat
+/YY.Server/bin/Debug/netcoreapp2.2/AppService6663.bat
+/YY.Server/bin/Debug/netcoreapp2.2/AppService6664.bat
+/YY.Server/bin/Debug/netcoreappP/AppService6661.bat
+/YY.Server/bin/Debug/netcoreappP/AppService6662.bat
+/YY.Server/bin/Debug/netcoreappP/AppService6663.bat
+/YY.Server/bin/Debug/netcoreappP/AppService6664.bat
+/YY.Server/bin/Debug/netcoreappP/Packages/Plugs插件使用说明.txt
+/YY.Server/bin/Debug/netcoreappP/Packages/dym.Plugs.Samsundot/dym.Plugs.SamsundotService.deps.json
+/YY.Server/bin/Debug/netcoreappP/Packages/dym.Plugs.Samsundot/dym.Plugs.SamsundotService.dll
+/YY.Server/bin/Debug/netcoreappP/Packages/dym.Plugs.Samsundot/dym.Plugs.SamsundotService.pdb
+/YY.Server/bin/Debug/netcoreappP/YY.Server.deps.json
+/YY.Server/bin/Debug/netcoreappP/YY.Server.dll
+/YY.Server/bin/Debug/netcoreappP/YY.Server.pdb
+/YY.Server/bin/Debug/netcoreappP/YY.Server.runtimeconfig.dev.json
+/YY.Server/bin/Debug/netcoreappP/YY.Server.runtimeconfig.json
+/YY.Server/bin/Debug/netcoreappP/dym.config
