--- a/.gitignore
+++ b/.gitignore
@@ -1,106 +1,17 @@
-/Packages/dym.Plugs.YYTestService/obj
+﻿/Packages/dym.Plugs.YYTestService/obj
 /.vs/dymDemo/DesignTimeBuild/.dtbcache
 /.vs/dymDemo/v16/.suo
 /.vs/dymDemo/v16/Server/sqlite3/db.lock
 /.vs/dymDemo/v16/Server/sqlite3/storage.ide
 /.vs/dymDemo/v16/Server/sqlite3/storage.ide-shm
 /.vs/dymDemo/v16/Server/sqlite3/storage.ide-wal
-/Packages/dym.Plugs.YYTestService/bin/Debug/netstandard2.0/dym.Plugs.YYTestService.deps.json
-/Packages/dym.Plugs.YYTestService/bin/Debug/netstandard2.0/dym.Plugs.YYTestService.dll
-/Packages/dym.Plugs.YYTestService/bin/Debug/netstandard2.0/dym.Plugs.YYTestService.pdb
-/YY.AppCenter/bin/Debug/netcoreapp2.2/YY.AppCenter.deps.json
-/YY.AppCenter/bin/Debug/netcoreapp2.2/YY.AppCenter.dll
-/YY.AppCenter/bin/Debug/netcoreapp2.2/YY.AppCenter.pdb
-/YY.AppCenter/bin/Debug/netcoreapp2.2/YY.AppCenter.runtimeconfig.dev.json
-/YY.AppCenter/bin/Debug/netcoreapp2.2/YY.AppCenter.runtimeconfig.json
-/YY.AppCenter/bin/Debug/netcoreapp2.2/dym.config
-/YY.AppCenter/obj/Debug/netcoreapp2.2/YY.AppCenter.AssemblyInfo.cs
-/YY.AppCenter/obj/Debug/netcoreapp2.2/YY.AppCenter.AssemblyInfoInputs.cache
-/YY.AppCenter/obj/Debug/netcoreapp2.2/YY.AppCenter.assets.cache
-/YY.AppCenter/obj/Debug/netcoreapp2.2/YY.AppCenter.csproj.CoreCompileInputs.cache
-/YY.AppCenter/obj/Debug/netcoreapp2.2/YY.AppCenter.csproj.FileListAbsolute.txt
-/YY.AppCenter/obj/Debug/netcoreapp2.2/YY.AppCenter.dll
-/YY.AppCenter/obj/Debug/netcoreapp2.2/YY.AppCenter.pdb
-/YY.AppCenter/obj/YY.AppCenter.csproj.nuget.cache
-/YY.AppCenter/obj/YY.AppCenter.csproj.nuget.dgspec.json
-/YY.AppCenter/obj/YY.AppCenter.csproj.nuget.g.props
-/YY.AppCenter/obj/YY.AppCenter.csproj.nuget.g.targets
-/YY.AppCenter/obj/project.assets.json
-/YY.Client/bin/Debug/netcoreapp2.2/YY.Client.deps.json
-/YY.Client/bin/Debug/netcoreapp2.2/YY.Client.dll
-/YY.Client/bin/Debug/netcoreapp2.2/YY.Client.pdb
-/YY.Client/bin/Debug/netcoreapp2.2/YY.Client.runtimeconfig.dev.json
-/YY.Client/bin/Debug/netcoreapp2.2/YY.Client.runtimeconfig.json
-/YY.Client/obj/Debug/netcoreapp2.2/YY.Client.AssemblyInfo.cs
-/YY.Client/obj/Debug/netcoreapp2.2/YY.Client.AssemblyInfoInputs.cache
-/YY.Client/obj/Debug/netcoreapp2.2/YY.Client.assets.cache
-/YY.Client/obj/Debug/netcoreapp2.2/YY.Client.csproj.CoreCompileInputs.cache
-/YY.Client/obj/Debug/netcoreapp2.2/YY.Client.csproj.FileListAbsolute.txt
-/YY.Client/obj/Debug/netcoreapp2.2/YY.Client.dll
-/YY.Client/obj/Debug/netcoreapp2.2/YY.Client.pdb
-/YY.Client/obj/YY.Client.csproj.nuget.cache
-/YY.Client/obj/YY.Client.csproj.nuget.dgspec.json
-/YY.Client/obj/YY.Client.csproj.nuget.g.props
-/YY.Client/obj/YY.Client.csproj.nuget.g.targets
-/YY.Client/obj/project.assets.json
-/YY.Server/bin/Debug/netcoreapp2.2/Packages/Plugs插件使用说明.txt
-/YY.Server/bin/Debug/netcoreapp2.2/Packages/dym.Plugs.YYTest/dym.Plugs.YYTestService.deps.json
-/YY.Server/bin/Debug/netcoreapp2.2/Packages/dym.Plugs.YYTest/dym.Plugs.YYTestService.dll
-/YY.Server/bin/Debug/netcoreapp2.2/Packages/dym.Plugs.YYTest/dym.Plugs.YYTestService.pdb
-/YY.Server/bin/Debug/netcoreapp2.2/YY.Server.deps.json
-/YY.Server/bin/Debug/netcoreapp2.2/YY.Server.dll
-/YY.Server/bin/Debug/netcoreapp2.2/YY.Server.pdb
-/YY.Server/bin/Debug/netcoreapp2.2/YY.Server.runtimeconfig.dev.json
-/YY.Server/bin/Debug/netcoreapp2.2/YY.Server.runtimeconfig.json
-/YY.Server/bin/Debug/netcoreapp2.2/dym.config
-/YY.Server/obj/Debug/netcoreapp2.2/YY.Server.AssemblyInfo.cs
-/YY.Server/obj/Debug/netcoreapp2.2/YY.Server.AssemblyInfoInputs.cache
-/YY.Server/obj/Debug/netcoreapp2.2/YY.Server.assets.cache
-/YY.Server/obj/Debug/netcoreapp2.2/YY.Server.csproj.CoreCompileInputs.cache
-/YY.Server/obj/Debug/netcoreapp2.2/YY.Server.csproj.FileListAbsolute.txt
-/YY.Server/obj/Debug/netcoreapp2.2/YY.Server.csprojAssemblyReference.cache
-/YY.Server/obj/Debug/netcoreapp2.2/YY.Server.dll
-/YY.Server/obj/Debug/netcoreapp2.2/YY.Server.pdb
-/YY.Server/obj/YY.Server.csproj.nuget.cache
-/YY.Server/obj/YY.Server.csproj.nuget.dgspec.json
-/YY.Server/obj/YY.Server.csproj.nuget.g.props
-/YY.Server/obj/YY.Server.csproj.nuget.g.targets
-/YY.Server/obj/project.assets.json
+**/**/*.dll
 /dymDemo.sln.DotSettings.user
-/Packages/dym.Plugs.SamsundotService/bin/Debug/netstandard2.0/dym.Plugs.SamsundotService.deps.json
-/Packages/dym.Plugs.SamsundotService/bin/Debug/netstandard2.0/dym.Plugs.SamsundotService.dll
-/Packages/dym.Plugs.SamsundotService/bin/Debug/netstandard2.0/dym.Plugs.SamsundotService.pdb
-/Packages/dym.Plugs.SamsundotService/obj/Debug/netstandard2.0/dym.Plugs.SamsundotService.AssemblyInfo.cs
-/Packages/dym.Plugs.SamsundotService/obj/Debug/netstandard2.0/dym.Plugs.SamsundotService.AssemblyInfoInputs.cache
-/Packages/dym.Plugs.SamsundotService/obj/Debug/netstandard2.0/dym.Plugs.SamsundotService.assets.cache
-/Packages/dym.Plugs.SamsundotService/obj/Debug/netstandard2.0/dym.Plugs.SamsundotService.csproj.CoreCompileInputs.cache
-/Packages/dym.Plugs.SamsundotService/obj/Debug/netstandard2.0/dym.Plugs.SamsundotService.csproj.FileListAbsolute.txt
-/Packages/dym.Plugs.SamsundotService/obj/Debug/netstandard2.0/dym.Plugs.SamsundotService.csprojAssemblyReference.cache
-/Packages/dym.Plugs.SamsundotService/obj/Debug/netstandard2.0/dym.Plugs.SamsundotService.dll
-/Packages/dym.Plugs.SamsundotService/obj/Debug/netstandard2.0/dym.Plugs.SamsundotService.pdb
-/Packages/dym.Plugs.SamsundotService/obj/dym.Plugs.SamsundotService.csproj.nuget.cache
-/Packages/dym.Plugs.SamsundotService/obj/dym.Plugs.SamsundotService.csproj.nuget.dgspec.json
-/Packages/dym.Plugs.SamsundotService/obj/dym.Plugs.SamsundotService.csproj.nuget.g.props
-/Packages/dym.Plugs.SamsundotService/obj/dym.Plugs.SamsundotService.csproj.nuget.g.targets
-/Packages/dym.Plugs.SamsundotService/obj/project.assets.json
-/YY.AppCenter/bin/Debug/netcoreapp2.2/AppCenter.bat
-/YY.AppCenter/obj/Debug/netcoreapp2.2/YY.AppCenter.csprojAssemblyReference.cache
-/YY.Client/bin/Debug/netcoreapp2.2/AppClient.bat
-/YY.Server/bin/Debug/netcoreapp2.2/AppService6661.bat
-/YY.Server/bin/Debug/netcoreapp2.2/AppService6662.bat
-/YY.Server/bin/Debug/netcoreapp2.2/AppService6663.bat
-/YY.Server/bin/Debug/netcoreapp2.2/AppService6664.bat
-/YY.Server/bin/Debug/netcoreappP/AppService6661.bat
-/YY.Server/bin/Debug/netcoreappP/AppService6662.bat
-/YY.Server/bin/Debug/netcoreappP/AppService6663.bat
-/YY.Server/bin/Debug/netcoreappP/AppService6664.bat
-/YY.Server/bin/Debug/netcoreappP/Packages/Plugs插件使用说明.txt
-/YY.Server/bin/Debug/netcoreappP/Packages/dym.Plugs.Samsundot/dym.Plugs.SamsundotService.deps.json
-/YY.Server/bin/Debug/netcoreappP/Packages/dym.Plugs.Samsundot/dym.Plugs.SamsundotService.dll
-/YY.Server/bin/Debug/netcoreappP/Packages/dym.Plugs.Samsundot/dym.Plugs.SamsundotService.pdb
-/YY.Server/bin/Debug/netcoreappP/YY.Server.deps.json
-/YY.Server/bin/Debug/netcoreappP/YY.Server.dll
-/YY.Server/bin/Debug/netcoreappP/YY.Server.pdb
-/YY.Server/bin/Debug/netcoreappP/YY.Server.runtimeconfig.dev.json
-/YY.Server/bin/Debug/netcoreappP/YY.Server.runtimeconfig.json
-/YY.Server/bin/Debug/netcoreappP/dym.config
+/Packages/**/obj/Debug/netstandard2.0
+/**/bin/Debug/netcoreapp3.0
+/**/obj/Debug/netcoreapp3.0
+/**/obj
+/**/bin/Debug/netcoreapp2.2
+/**/dym.Plugs.YYTestService/bin/Debug/netstandard2.0
+/**/**/bin/Debug/netstandard2.1
+/**/**/bin/Debug/netstandard2.0
