--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,11 @@
-﻿/Packages/dym.Plugs.YYTestService/obj
-/.vs/dymDemo/DesignTimeBuild/.dtbcache
-/.vs/dymDemo/v16/.suo
-/.vs/dymDemo/v16/Server/sqlite3/db.lock
-/.vs/dymDemo/v16/Server/sqlite3/storage.ide
-/.vs/dymDemo/v16/Server/sqlite3/storage.ide-shm
-/.vs/dymDemo/v16/Server/sqlite3/storage.ide-wal
+﻿/Packages/Anno.Plugs.YYTestService/obj
+/.vs
 **/**/*.dll
-/dymDemo.sln.DotSettings.user
-/Packages/**/obj/Debug/netstandard2.0
-/**/bin/Debug/netcoreapp3.0
-/**/obj/Debug/netcoreapp3.0
+/AnnoDemo.sln.DotSettings.user
+/Packages/**/obj
+/Packages/**/bin
+/**/bin
 /**/obj
-/**/bin/Debug/netcoreapp2.2
-/**/dym.Plugs.YYTestService/bin/Debug/netstandard2.0
-/**/**/bin/Debug/netstandard2.1
-/**/**/bin/Debug/netstandard2.0
+/**/bin/Debug/netcoreapp3.1
+/**/Anno.Plugs.YYTestService/bin
+/**/**/bin
