--- a/YY.Server/Anno.config
+++ b/YY.Server/Anno.config
@@ -11,7 +11,7 @@
   <Port>6659</Port>
   <!--权重-->
   <Weight>1</Weight>
-  <!--功能  <FuncName>dym.Plugs.LogicService,dym.Plugs.TraceService</FuncName> -->
+  <!--功能  <FuncName>Anno.Plugs.LogicService,Anno.Plugs.TraceService</FuncName> -->
   <FuncName>
   </FuncName>
   <!--忽略的功能-->
@@ -23,13 +23,13 @@
   <Ts Ip="127.0.0.1" Port="6660" />
   <IocDll>
     <!-- IOC 仓储-->
-    <!-- <Assembly>dym.Repository</Assembly> -->
+    <!-- <Assembly>Anno.Repository</Assembly> -->
     <!-- 领域-->
-    <!-- <Assembly>dym.Domain</Assembly> -->
+    <!-- <Assembly>Anno.Domain</Assembly> -->
     <!-- 查询服务-->
-    <!-- <Assembly>dym.QueryServices</Assembly> -->
+    <!-- <Assembly>Anno.QueryServices</Assembly> -->
     <!--事件Handler-->
-    <!--<Assembly>dym.Command.Handler</Assembly>-->
+    <!--<Assembly>Anno.Command.Handler</Assembly>-->
   </IocDll>
   <appSettings>
     <!-- 数据库连接字符串 Mysql-->
@@ -43,7 +43,7 @@
                                     redisSwitch 是否开启数据库 false 不开启
                                     -->
     <add key="redisConn" value="127.0.0.1:6379,abortConnect=false,allowAdmin =true,keepAlive=180" />
-    <add key="redisPrefix" value="dym:" />
+    <add key="redisPrefix" value="Anno:" />
     <add key="redisExpiryDate" value="20" />
     <add key="redisSwitch" value="false" />
     <!--MongoDB 配置-->
