--- a/YY.AppCenter/YY.AppCenter.csproj
+++ b/YY.AppCenter/YY.AppCenter.csproj
@@ -2,11 +2,11 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp3.0</TargetFramework>
+    <TargetFrameworks>net461;netcoreapp3.1</TargetFrameworks>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="dym.Rpc.Center" Version="1.1.5" />
+    <PackageReference Include="Anno.Rpc.Center" Version="1.0.1.3" />
   </ItemGroup>
 
   <ItemGroup>
